--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   font-family: 'Mulish', sans-serif;
   font-weight: 400;
   --primary-color:  #F36F00;
+  --primary-color:  #f36d00c0;
+  --secondary-color: ##131313;
   --n-background-color: #fceeee;
   --neutral-color: ##D0D0D0;
   --deep-neutral-color: #626262;
@@ -24,4 +26,12 @@ input{
   font-family: var(--font-family);
   border: none;
   outline: none;
+  font-size: 16px;
+}
+
+textarea{
+  font-family: var(--font-family);
+  border: none;
+  outline: none;  font-size: 16px;
+  font-size: 16px;
 }
