--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   font-weight: 400;
   --primary-color:  #F36F00;
   --primary-color:  #f36d00c0;
-  --secondary-color: ##131313;
+  --secondary-color: #131313;
   --n-background-color: #fceeee;
   --neutral-color: ##D0D0D0;
   --deep-neutral-color: #626262;
