--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .social_icon {
   color: white;
   font-size: 17px;
@@ -252,16 +253,17 @@
 
 .footer{
   background-color: var(--secondary-color);
-  padding: 4rem;
+  padding: 4rem 4rem 0rem 4rem;
+
 }
 
 .footer_box_container{
   display: flex;
   width: 100%;
+  padding-bottom: 2rem;
 }
 
 .footer_box{
-  border: 1px solid white;
   width: 25%;
 }
 
@@ -276,4 +278,36 @@
   color: white;
   padding: .7rem 0rem;
 
+}
+
+.footer_social_box {
+  background-color: white;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 11px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_social_icon {
+  color: black;
+  font-size: 17px;
+}
+
+.footer_social_container {
+  /* padding-top: 10px; */
+  display: flex;
+  justify-content: space-between;
+  width: 45%;
+}
+
+.rights{
+  border-top: 1px solid var(--deep-neutral-color);
+  color:  #94A3B8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding:1rem ;
+  
 }
