--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url(./index.css);
 
-.nav_bar {
+.desktop_nav_bar {
   padding: 1rem 4rem;
   display: flex;
   align-items: center;
@@ -28,7 +28,7 @@
   cursor: pointer;
 }
 
-.hamburger{
+.hamburger {
   display: none;
 }
 
@@ -78,6 +78,7 @@
   border-radius: 100px;
   background-color: var(--n-background-color);
   border-radius: 0px, 32px, 0px, 32px;
+  cursor: pointer;
 }
 
 .user_icon {
@@ -86,7 +87,7 @@
 
 .contact_body {
   background-image: url(../public/img/bg-phone.png);
-  height: 80vh;
+  /* height: 80vh; */
   padding: 4rem 10rem;
   /* border: 1px solid red; */
   background-position: center;
@@ -202,7 +203,6 @@
 
 .input_problem {
   width: 100%;
-  height: 15rem;
   padding: 1.5rem;
   border-radius: 20px;
   resize: none;
@@ -244,44 +244,41 @@
   width: 55%;
 }
 
-.action_button{
+.action_button {
   text-align: center;
-  
 }
 
-.action_button:hover{
+.action_button:hover {
   transform: scale(0.95);
-  transition: ease-in-out .6s all;
+  transition: ease-in-out 0.6s all;
   cursor: pointer;
 }
 
-.footer{
+.footer {
   background-color: var(--secondary-color);
   padding: 4rem 4rem 0rem 4rem;
-
 }
 
-.footer_box_container{
+.footer_box_container {
   display: flex;
   width: 100%;
   padding-bottom: 2rem;
 }
 
-.footer_box{
+.footer_box {
   width: 25%;
 }
 
-.footer_head{
+.footer_head {
   font-weight: bold;
   font-size: 20px;
   color: var(--primary-color);
   padding: 1rem 0rem;
 }
 
-.footer_items{
+.footer_items {
   color: white;
-  padding: .7rem 0rem;
-
+  padding: 0.7rem 0rem;
 }
 
 .footer_social_box {
@@ -306,34 +303,168 @@
   width: 45%;
 }
 
-.rights{
+.rights {
   border-top: 1px solid var(--deep-neutral-color);
-  color:  #94A3B8;
+  color: #94a3b8;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding:1rem ;
-  
+  padding: 1rem;
 }
 
-
-
 /* RESPONISIVE DESIGN */
-@media only screen and (max-width: 1500px){
-  .nav_links_container{
+@media screen and (max-width: 1600px) {
+  .about_us {
+    width: 300px;
+    border: 1px solid red;
+  }
+
+  .social_container {
+    border: 1px solid rebeccapurple;
+    width: 60%;
+  }
+
+  .footer_social_container {
+    border: 1px solid rebeccapurple;
+    width: 60%;
+  }
+
+  .contact_container {
+    border: 1px solid saddlebrown;
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+  .hamburger {
+    display: block;
+  }
+
+  .nav_links_container {
     border: 1px solid red;
     display: none;
   }
+  .desktop_nav_bar {
+    /* display: none; */
+  }
 
-  .search_bar{
+  .logo_container {
+    /* display: none; */
+  }
+  .mobile_nav_bar {
+    padding: 1rem 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+      rgba(17, 17, 26, 0.05) 0px 8px 32px;
+    /* position: sticky; */
+    top: 0;
+    left: 0;
+    background-color: white;
+  }
+
+  .search_bar {
     display: none;
   }
 
-  .left_nav_items{
+  .fa-times {
+    font-size: 2rem;
+    color: var(--primary-color);
+  }
+
+  .fa-bars {
+    font-size: 2rem;
+    color: var(--primary-color);
+  }
+
+  .left_nav_items {
     display: none;
   }
 
-    .hamburger{
-      display: block;
+  .mobile_nav_bar {
+  }
+
+  .navbar_menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    height: 100vh;
+    width: 100%;
+    padding-top: 5rem;
+  }
+
+  .mobile_user_box {
+    border: 1px solid var(--primary-color);
+    width: 16%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem;
+    border-radius: 100px;
+    background-color: var(--n-background-color);
+    border-radius: 0px, 32px, 0px, 32px;
+    cursor: pointer;
+  }
+
+  .mobile_search_bar {
+    border: 1px solid #d0d0d0;
+    padding: 1rem;
+    width: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+  }
+
+  .mobile_uk_logo {
+    cursor: pointer;
+    width: 10%;
+  }
+
+  .mobile_cart_icon {
+    cursor: pointer;
+    width: 10%;
+  }
+
+  .mobile_search_input {
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: 90%;
+  }
+
+  .mobile_left_nav_items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 20%;
+    padding-top: 3rem;
+  }
+
+  .mobile_nav_links_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+  }
+
+  .mobile_nav_links {
+    list-style: none;
+    padding: 0.5rem 3rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+  }
+
+  .contact_body {
+    padding: 4rem 6rem;
+  }
+
+  @media screen and (max-width: 1300px) {
+    .contact_body {
+      padding: 3rem;
+      flex-direction: column-reverse;
     }
+  }
 }
